--- a/style.css
+++ b/style.css
@@ -740,6 +740,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 444px;
+    height: 275px;
 }
 
 .portfolio-row {
@@ -818,6 +820,8 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.webp");
+    width: 100%;
+    height: 100%;
 }
 
 .bg-presentation {
@@ -974,10 +978,7 @@ h4 {
         float: left;
         margin-left: 10px;
     }
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
+
     .bloc-xxl,
     .bloc-xl,
     .bloc-lg {
