--- a/style.css
+++ b/style.css
@@ -741,9 +741,8 @@ h4 {
 }
 
 .portfolio-thumb {
+    margin: auto;
     margin-bottom: 24px;
-    width: 330px;
-    height: 275px;
 }
 
 .portfolio-row {
