--- a/style.css
+++ b/style.css
@@ -786,7 +786,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #000000 ;
+    color: #000000;
 }
 
 .btn-atomic-tangerine:hover {
@@ -833,6 +833,10 @@ h4 {
     background-image: url("img/image-de-presentation.webp");
     width: 100%;
     height: 100%;
+}
+
+ul {
+    list-style-type: none;
 }
 
 @media (max-width: 1024px) {
